# Smart-Web-Application-Replay-Generator

./: .replit  README.md  app.py  pyproject.toml  replit.md
attached_assets/: Pasted--Build-a-Python-based-project-called-Smart-Web-Application-Attack-Replay-Generator-This-tool-sho-1763550243029_1763550243030.txt  Pasted-A-single-polyglot-file-named-salary-2025-xlsx-that-opens-cleanly-in-Microsoft-Excel-no-macro-wa-1763549785615_1763549785616.txt
batch/: batch_processor.py
database/: db_manager.py
detector/: attack_detector.py
generator/: replay_generator.py
parser/: log_parser.py
